--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Моя первая страница</title>
+<link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body>
-<center>
     <video id="player" poster="img/placeholder-bigbuckbunny-1080p.png" controls>
         <source src="http://media.w3.org/2010/05/bunny/movie.mp4">
     </video>
@@ -14,12 +15,11 @@
 
     <p>Writers:Sacha Goedegebure</p>
     </br>
-</center>
 <div class="hyi">
-    <img src="Hp782Mh_k4Q.jpg" style="position:absolute;left:250px;right:100px" >
-    <img src="dcyrd86Yg5M.jpg" style="position:absolute;left:450px;right:0px">
-    <img src="jGc0idJo8dg.jpg" style="position:absolute;left:675px;right:px">
-    <img src="NggvcLQTDzQ.jpg" style="position:absolute;left: px;right:250px" >
+    <img src="Hp782Mh_k4Q.jpg">
+    <img src="dcyrd86Yg5M.jpg">
+    <img src="jGc0idJo8dg.jpg">
+    <img src="NggvcLQTDzQ.jpg">
 </div>
 </body>
 </html>
